# backend

./: .gitignore  README.md  docker-compose.yml
clone-proxy/: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  MAINNET_DEPLOYMENT.md  NEXT_STEPS.md  README.md  config.ts  extra-data-flow.md  index.ts  logger.ts  package.json  proxy.ts  startup.ts  token_config.json  tsconfig.json
clone-proxy/blockchain/: batch-push-service.ts  decoder.ts  indexer.ts  wallet.ts
clone-proxy/models/: borsh-schemas.ts
clone-proxy/network/: extra-data-strategies.ts  manifest.ts  payment.ts  providers.ts  tribe-payment.ts
clone-proxy/programs/idl/: orbis_protocol.json
clone-proxy/programs/orbis-protocol/: Cargo.toml
clone-proxy/programs/orbis-protocol/src/: lib.rs
clone-proxy/routes/: auth.ts  feed.ts  groups.ts  misc.ts  payments.ts  places.ts  polygon.ts  posts.ts  profile.ts  v3.ts
clone-proxy/scripts/: client-register-clone.ts  genesis-admin.ts  get_and_use_api_key.ts  initialize-program.ts  mint-token.ts  update-base-url.ts
clone-proxy/test/: create-merkle-tree.ts  fetch_idl.ts  geo_test.ts  hash_test.ts  send_orbis.ts
orbis-v2_back-end.-mongodb-java/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  gradlew  gradlew.bat  lombok.config  settings.gradle
orbis-v2_back-end.-mongodb-java/docs/: Orbis V2 API.postman_collection.json  README.md  orbisv2-postman.json  users-member-discrepancy-check.js
orbis-v2_back-end.-mongodb-java/resizerfunc/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+465 files in other folders)
