[workspace]
members = ["programs/*"]
# programs/idl holds JSON IDLs, not a crate — keep the glob from trying to build it.
exclude = ["programs/idl"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0" }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
overflow-checks = true
